# agent_benchmark

./: .gitignore  README.md  agent_runtime_benchmark_plan_v3.md  main.py  pyproject.toml
bug_exam/: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements.txt
bug_exam/bug_exam/: __init__.py  cli.py  db.py  schema.py  swebench_helpers.py
bug_exam/bug_exam/adapters/: __init__.py  swebench_pro_source.py
bug_exam/bug_exam/envbuild/: __init__.py  detector.py  runner.py
bug_exam/bug_exam/evaluator/: __init__.py  docker_runner.py  entryscript.py  local_runner.py  scoring.py  swe_bench_pro_runner.py  warm_pool.py
bug_exam/bug_exam/harvester/: __init__.py  contamination.py  github_search.py
bug_exam/bug_exam/injector/: __init__.py  agent.py  break_plan.py  scrubber.py  tools.py
bug_exam/bug_exam/llm/: __init__.py  anthropic_client.py  factory.py  glm_client.py  retry.py  types.py
bug_exam/bug_exam/orchestrator/: __init__.py  pipeline.py
bug_exam/bug_exam/scoring/: __init__.py  bradley_terry.py  elo.py  irt.py  leaderboard.py  stratify.py
bug_exam/bug_exam/solvers/: __init__.py  _openhands_runner.py  aider.py  base.py  claude_direct.py  mini_swe_agent.py  openhands.py
bug_exam/bug_exam/validator/: __init__.py  ast_diff.py  dedup.py  operator_check.py  solvability_oracle.py  test_gates.py
bug_exam/configs/: difficulty_bands.yaml  harvester.yaml  languages.yaml  mutation_operators.yaml  oracle.yaml  solvers.yaml
bug_exam/docs/: m1_swe_bench_pro_integration.md
bug_exam/scripts/: compare_solvers.py  deploy.sh  pull_results.sh  render_leaderboard.py  run_contamination_probe.py  run_e2e_live.py  run_injector_live.py  run_one_swebench_pro.py  run_swebench_pro_batch.py  run_swebench_pro_m1.py  screen_swebench_pro.py  smoke.sh
bug_exam/tests/integration/: test_vertical_slice.py
(+71 files in other folders)
