[project]
name = "agent-benchmark"
version = "0.1.0"
description = "Unified agent benchmark harness for GLM evaluation"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0",
    "openai>=1.0",
    "huggingface-hub>=0.20",
    "requests",
]

[project.optional-dependencies]
webarena = [
    "webarena-verified",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]
